feat: #ENABLING-213, java 21 migration